# goit-ds-hw-02

./: README.md  Select_user_tasks_by_status.py  Select_user_tasks_by_user_id.py  create_db.py  database.db  database_config.db  database_config.sql  pyproject.toml  queries.py  requests.py  seed.py
