[tool.poetry]
name = "ds_ml_module_2_hw_database"
version = "0.1.0"
description = "DS&ML module 2 HW Database"
authors = ["mrdrebot <m.r.drebot.j@gmail.com>"]
license = "MTI"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^33.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
